--- a/baidu/小薇学院/task02/index.html
+++ b/baidu/小薇学院/task02/index.html
@@ -263,7 +263,7 @@
         <p>曾经最爱哭的你老师们都已想不起猜不出问题的你我也是偶然翻相片 <a href="www.baidu.com">进入到百度</a>才想起同桌的
             <br/></p>
         <p>曾经最爱哭的你老师们都已想不起猜不出问题的你我也是偶然翻相片才想起同桌的</p>
-        <img src="nuobeier.jpg"/>
+        <img src="./nuobeier.jpg"/>
         <ul>
             <li>列表项目一</li>
             <li>列表项目二</li>
