图片路径更改

--- a/baidu/小薇学院/task02/index.html
+++ b/baidu/小薇学院/task02/index.html
@@ -248,7 +248,7 @@
         <p>曾经最爱哭的你老师们都已想不起猜不出问题的你我也是偶然翻相片 <a href="www.baidu.com">进入到百度</a>才想起同桌的
             <br/></p>
         <p>曾经最爱哭的你老师们都已想不起猜不出问题的你我也是偶然翻相片才想起同桌的</p>
-        <img src="nuobeier.jpg"/>
+        <img src="img/nuobeier.jpg"/>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;曾经最爱哭的你老师们都已想不起猜不出问题的你我也是偶然翻相片才想起同桌的你谁娶了多愁善感的你谁看了你的日记曾经最爱哭的你老师们都已想不起猜不出问题的你我也是偶然翻相片才想起同桌的你谁娶了多愁善感的你谁看了你的日记<br/></p>
         <p>曾经最爱哭的你老师们都已想不起猜不出问题的你我也是偶然翻相片 <a href="www.baidu.com">进入到百度</a>才想起同桌的
             <br/></p>
@@ -263,7 +263,7 @@
         <p>曾经最爱哭的你老师们都已想不起猜不出问题的你我也是偶然翻相片 <a href="www.baidu.com">进入到百度</a>才想起同桌的
             <br/></p>
         <p>曾经最爱哭的你老师们都已想不起猜不出问题的你我也是偶然翻相片才想起同桌的</p>
-        <img src="./nuobeier.jpg"/>
+        <img src="img/nuobeier.jpg"/>
         <ul>
             <li>列表项目一</li>
             <li>列表项目二</li>
@@ -274,31 +274,31 @@
         <h1>图片</h1>
         <div>
             <p>好看的图片</p>
-            <img src="nuobeier.jpg"/>
+            <img src="img/nuobeier.jpg"/>
         </div>
         <div>
             <p>好看的图片</p>
-            <img src="nuobeier.jpg"/>
+            <img src="img/nuobeier.jpg"/>
         </div>
         <div>
             <p>好看的图片</p>
-            <img src="nuobeier.jpg"/>
+            <img src="img/nuobeier.jpg"/>
         </div>
         <div>
             <p>好看的图片</p>
-            <img src="nuobeier.jpg"/>
+            <img src="img/nuobeier.jpg"/>
         </div>
         <div>
             <p>好看的图片</p>
-            <img src="nuobeier.jpg"/>
+            <img src="img/nuobeier.jpg"/>
         </div>
         <div>
             <p>好看的图片</p>
-            <img src="nuobeier.jpg"/>
+            <img src="img/nuobeier.jpg"/>
         </div>
         <div>
             <p>好看的图片</p>
-            <img src="nuobeier.jpg"/>
+            <img src="img/nuobeier.jpg"/>
         </div>
     </section>
     <section id="section4">
