--- a/baidu/斌斌学院/task 2.html
+++ b/baidu/斌斌学院/task 2.html
@@ -36,7 +36,7 @@
             console.log(aqiData.length);
             console.log(aqiData[i][1]);
             if(aqiData[i][1] >= 60){
-               arr.push("<li>第"+arr[i]+aqiData[i]+"</li>");
+               arr.push("<li>"+aqiData[i]+"</li>");
 
             }
         }
