--- a/baidu/斌斌学院/task 2.html
+++ b/baidu/斌斌学院/task 2.html
@@ -41,6 +41,7 @@
                arr.push("<li>第"+num+"名: "+aqiData[i]+"</li>");
 
             }
+            num++;
         }
         document.getElementById('aqi-list').innerHTML = arr.join(" ");
 
